used aggregate to get option by categorySlug
