# src/modules/option/option.routes.js
@@ -4,6 +4,7 @@ const router = Router();
 
 router.post('/', optionController.create);
 router.get('/by-category/:categoryId', optionController.findByCategoryId);
+router.get('/by-category-slug/:slug', optionController.findByCategorySlug);
 router.get('/:id', optionController.findById);
 router.get('/', optionController.find);
 
